Remove banner section from mostrar.tpl and ensure breadcrumb visibility in CSS

--- a/views/css/misimagenes.css
+++ b/views/css/misimagenes.css
@@ -45,6 +45,11 @@
     visibility: hidden !important;
 }
 
+#wrapper .breadcrumb[data-depth="1"] {
+    display: block !important;
+}
+
+
 /* Efecto lupa solo para escritorio */
 @media (min-width: 1024px) {
     .imagen-zoom-container {
